import React from 'react';
// import renderer from 'react-test-renderer';  // 这个不支持antdesign
import Enzyme, { shallow } from 'enzyme';
import Adapter from 'enzyme-adapter-react-16';
import info from '..';

Enzyme.configure({ adapter: new Adapter() });
describe('(Component) info -- snapshot', () => {
  it('capture snapshot of info', () => {
    const footer = shallow(<info />);
    expect(footer).toMatchSnapshot();
  });
});
